# ft_vox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.in  build.zig  build.zig.zon  shaders.zig  shell.html
assets/blocks/: deep_water.zon  dirt.zon  grass.zon  sand.zon  savanna_dirt.zon  snow.zon  snow_dirt.zon  snowy_grass.zon  stone.zon  water.zon
assets/shaders/: basic_cube.frag  basic_cube.vert  basic_cube.zon  cube_shadow.frag  cube_shadow.vert  font.frag  font.vert  skybox.frag  skybox.vert  voxel.frag  voxel.vert
assets/shaders/gl/: basic_cube.frag  basic_cube.vert
assets/shaders/vk/: basic_cube.frag  basic_cube.vert  font.frag  font.vert
assets/xcf/: Dirt_with_grass.xcf  Grass.xcf  stone.xcf
cmake/: AddShaders.cmake
src/: AABB.zig  Biome.zig  Camera.zig  Font.zig  Material.zig  Mesh.zig  MeshPrimitives.hpp  Renderer.zig  Skybox.zig  Text.zig  TrackingAllocator.zig  Window.cpp  Window.hpp  Window.zig  assets.zig  c.h  console.zig  dcimgui.h  emscripten.h  emscripten.zig  input.zig  main.cpp  main.zig  math.zig  precompiled.hpp  sdl.h  vk.zig  vk_mem_alloc_impl.h  world.zig  world_gen.zig
src/Core/: Error.cpp  Error.hpp  Ref.hpp  Span.hpp  StackVector.hpp
src/Render/: Driver.cpp  Driver.hpp  DriverVulkan.cpp  DriverVulkan.hpp  Graph.cpp  Graph.hpp  RenderDriver.hpp
src/math/: SimplexNoise.zig  noise.zig
src/render/: Buffer.zig  Device.zig  EmWindow.zig  Graph.zig  GraphicsPipeline.zig  Image.zig  Material.zig  RenderFrame.zig  Renderer.zig  SDLWindow.zig  ShaderModel.zig  ShadowPass.zig  Window.zig  opengl.zig  vulkan.zig  webgpu.zig
src/render/backend/: gles.zig  vulkan.zig  webgpu.zig
src/voxel/: Block.zig  BlockRegistry.zig  Chunk.zig  Registry.zig  RenderFrame.zig  TextureDatabase.zig  World.zig  gen.zig  wg2.zig
src/window/: EmWindow.zig  SDLWindow.zig
web/: index.html  index.js  package.json  pre.js  vite.config.js
worldgen_tools/: build.zig  build.zig.zon
worldgen_tools/src/: main.zig  noise.zig
